# zimi

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PLAN.md  README.md  RELEASE_v1.5.0.md  RELEASING.md  appcast-arm64.xml  appcast-intel.xml  appcast.xml  deploy.sh  docker-compose.yml  pyproject.toml  requirements-desktop.txt  requirements.txt  rthook_pythonnet.py  zimi.py  zimi_desktop.py  zimi_desktop.spec  zimi_mcp.py
.github/workflows/: ci.yml  desktop-release.yml  docker-publish.yml  publish-release.yml
assets/: generate_icons.py  icon.icns
linux/: AppRun  zimi.desktop
snap/: snapcraft.yaml
static/pdfjs/web/: viewer.html
templates/: index.html
tests/: test_server.py  test_unit.py
windows/: Install Zimi.bat  install-windows.ps1
zimi/: __init__.py  __main__.py  mcp_server.py  server.py
zimi/assets/: generate_icons.py
zimi/static/pdfjs/web/: viewer.html
zimi/templates/: index.html
